# test_resource

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: memory_resource.h
test/: CMakeLists.txt  TestAllocation.cpp  TestMemoryResource.cpp  main.cpp
